apps/coolstore/coolstore-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: coolstore
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
