apps/coolstore/datagrid-dc.yaml
kind: DeploymentConfig
apiVersion: apps.openshift.io/v1
metadata:
  annotations:
  name: datagrid-service
  labels:
    app: datagrid-service
    app.kubernetes.io/component: datagrid-service
    app.kubernetes.io/instance: datagrid-service
    app.kubernetes.io/part-of: cart 
    app.openshift.io/runtime: datagrid
spec:
  strategy:
    type: Rolling
    rollingParams:
      updatePeriodSeconds: 1
      intervalSeconds: 1
      timeoutSeconds: 600
      maxUnavailable: 25%
      maxSurge: 25%
    resources: {}
    activeDeadlineSeconds: 21600
  triggers:
    - type: ConfigChange
    - type: ImageChange
      imageChangeParams:
        automatic: true
        containerNames:
          - datagrid-service
        from:
          kind: ImageStreamTag
          name: 'datagrid-service:12.0.0.Final-1'
  replicas: 1
  revisionHistoryLimit: 10
  test: false
  selector:
    deploymentconfig: datagrid-service
  template:
    metadata:
      labels:
        deploymentconfig: datagrid-service
      annotations:
    spec:
      containers:
        - name: datagrid-service
          image: >-
            infinispan/server:12.0.0.Final-1
          ports:
            - containerPort: 2157
              protocol: TCP
            - containerPort: 46655
              protocol: TCP
            - containerPort: 57600
              protocol: TCP
            - containerPort: 7800
              protocol: TCP
            - containerPort: 7900
              protocol: TCP
            - containerPort: 11221
              protocol: TCP
            - containerPort: 11222
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
