apps/coolstore/orderdb-dc.yaml
kind: DeploymentConfig
apiVersion: apps.openshift.io/v1
metadata:
  annotations:
  name: order-database
  labels:
    app: order-database
    app.kubernetes.io/component: order-database
    app.kubernetes.io/instance: order-database
    app.kubernetes.io/part-of: order
    app.openshift.io/runtime: mongodb
spec:
  strategy:
    type: Rolling
    rollingParams:
      updatePeriodSeconds: 1
      intervalSeconds: 1
      timeoutSeconds: 600
      maxUnavailable: 25%
      maxSurge: 25%
    resources: {}
    activeDeadlineSeconds: 21600
  triggers:
    - type: ConfigChange
    - type: ImageChange
      imageChangeParams:
        automatic: true
        containerNames:
          - order-database
        from:
          kind: ImageStreamTag
          name: 'order-database:4.0'
  replicas: 1
  revisionHistoryLimit: 10
  test: false
  selector:
    deploymentconfig: order-database
  template:
    metadata:
      labels:
        deploymentconfig: order-database
      annotations:
    spec:
      volumes:
        - name: order-database-volume-1
          emptyDir: {}
        - name: order-database-volume-2
          emptyDir: {}
      containers:
        - name: order-database
          image: >-
            order-database:4.0
          ports:
            - containerPort: 27017
              protocol: TCP
          resources: {}
          volumeMounts:
            - name: order-database-volume-1
              mountPath: /data/configdb
            - name: order-database-volume-2
              mountPath: /data/db
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
