apps/coolstore/cart-service.yaml
kind: Service
apiVersion: v1
metadata:
  annotations:
  name: cart
  labels:
    app.kubernetes.io/name: cart
    app.kubernetes.io/version: 1.0-SNAPSHOT
    app.openshift.io/runtime: quarkus
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    deploymentconfig: cart
  type: ClusterIP
  sessionAffinity: None
