apps/coolstore/catalog-service.yaml
kind: Service
apiVersion: v1
metadata:
  annotations:
  name: catalog
  labels:
    app: catalog
    app.kubernetes.io/component: catalog
    app.kubernetes.io/instance: catalog
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: 8443-tcp
      protocol: TCP
      port: 8443
      targetPort: 8443
    - name: 8778-tcp
      protocol: TCP
      port: 8778
      targetPort: 8778
  selector:
    deploymentconfig: catalog
  type: ClusterIP
  sessionAffinity: None
