apps/coolstore/inventorydb-service.yaml
kind: Service
apiVersion: v1
metadata:
  annotations:
  name: inventory-database
  labels:
spec:
  ports:
    - name: postgresql
      protocol: TCP
      port: 5432
      targetPort: 5432
  selector:
    name: inventory-database
  type: ClusterIP
  sessionAffinity: None
