apps/coolstore/order-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  annotations:
  name: order
  labels:
    app.kubernetes.io/name: order
spec:
  path: /
  to:
    kind: Service
    name: order
    weight: 100
  port:
    targetPort: 8080
  wildcardPolicy: None
